# pos-ecommerce-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.dev.yml
api-backoffice/: Cargo.toml
api-backoffice/src/: audit.rs  config.rs  error.rs  impersonation_client.rs  integration_tests.rs  main.rs  router.rs  state.rs
api-backoffice/src/adapters/: mod.rs
api-backoffice/src/handlers/: analytics.rs  dunning.rs  impersonate.rs  mod.rs  plans.rs  subscriptions.rs
api-backoffice/src/jobs/: mod.rs
api-backoffice/src/middleware/: auth.rs
api-backoffice/src/routes/: analytics_routes.rs  dunning_routes.rs  mod.rs  org_routes.rs  plan_routes.rs  subscription_routes.rs
api-gateway/: Cargo.toml
api-gateway/src/: audit.rs  bootstrap.rs  config.rs  cors.rs  database.rs  error.rs  main.rs  router.rs  state.rs
api-gateway/src/adapters/: mod.rs  subscription_billing_stubs.rs
api-gateway/src/extractors/: current_user.rs  json.rs  mod.rs
api-gateway/src/handlers/: auth_handlers.rs  cai_handlers.rs  internal.rs  inventory_handlers.rs  mod.rs  store_handlers.rs  terminal_handlers.rs
api-gateway/src/handlers/accounting/: accounts.rs  journal_entries.rs  mod.rs  periods.rs  reports.rs
api-gateway/src/handlers/analytics/: dashboards.rs  kpis.rs  mod.rs  reports.rs
api-gateway/src/handlers/booking/: appointments.rs  mod.rs  policies.rs  public.rs  resources.rs  services.rs
api-gateway/src/handlers/cash_management/: accounts.rs  deposits.rs  mod.rs  reconciliations.rs  transactions.rs
api-gateway/src/handlers/catalog/: images.rs  listings.rs  mod.rs  public.rs  reviews.rs  storage_providers.rs  wishlist.rs
api-gateway/src/handlers/demand_planning/: abc.rs  forecasts.rs  mod.rs  policies.rs  suggestions.rs
api-gateway/src/handlers/fiscal/: invoices.rs  mod.rs  tax_rates.rs
api-gateway/src/handlers/inventory/: adjustments.rs  categories.rs  mod.rs  products.rs  recipes.rs  reports.rs  reservations.rs  stock.rs  transfers.rs  variants.rs
api-gateway/src/handlers/loyalty/: members.rs  mod.rs  programs.rs  rewards.rs  tiers.rs
api-gateway/src/handlers/payments/: gateways.rs  mod.rs  payouts.rs  transactions.rs  webhooks.rs
api-gateway/src/handlers/purchasing/: goods_receipts.rs  mod.rs  purchase_orders.rs  vendors.rs
api-gateway/src/handlers/restaurant/: kds_stream.rs  mod.rs  modifiers.rs  stations.rs  tables.rs  tickets.rs
api-gateway/src/handlers/sales/: cart.rs  credit_notes.rs  customers.rs  ecommerce.rs  mod.rs  pos.rs  promotions.rs  shifts.rs
api-gateway/src/handlers/service_orders/: assets.rs  diagnostics.rs  items.rs  mod.rs  orders.rs  public.rs  quotes.rs  transitions.rs
api-gateway/src/handlers/shipping/: delivery_providers.rs  drivers.rs  methods.rs  mod.rs  public.rs  rates.rs  shipments.rs  webhooks.rs  zones.rs
api-gateway/src/handlers/subscriptions/: mod.rs  org_subscription.rs  plans.rs
api-gateway/src/handlers/tenancy/: branding.rs  domains.rs  mod.rs  organizations.rs  plans.rs  public.rs
api-gateway/src/jobs/: analytics_recompute.rs  cart_cleanup.rs  demand_planning_recompute.rs  event_dispatcher.rs  mod.rs  notification_dispatcher.rs  reservation_expiry.rs  subscription_billing.rs
api-gateway/src/middleware/: auth.rs  mod.rs  org_scope.rs  permission.rs  rate_limit.rs
api-gateway/src/routes/: accounting_routes.rs  analytics_routes.rs  auth_routes.rs  booking_routes.rs  cash_management_routes.rs  catalog_routes.rs  demand_planning_routes.rs  fiscal_routes.rs  internal_routes.rs  inventory_routes.rs  loyalty_routes.rs  mod.rs  payments_routes.rs  purchasing_routes.rs  restaurant_routes.rs  sales_routes.rs  service_orders_routes.rs  shipping_routes.rs  store_routes.rs  subscriptions_routes.rs  tenancy_routes.rs  terminal_routes.rs
backoffice-api/: Cargo.toml
backoffice-api/src/: config.rs  database.rs  error.rs  integration_tests.rs  main.rs  router.rs  state.rs
backoffice-api/src/handlers/: auth.rs  health.rs  impersonate.rs  mod.rs  orgs.rs
backoffice-api/src/jobs/: mod.rs
backoffice-api/src/middleware/: auth.rs  permission.rs
backoffice-api/src/routes/: auth_routes.rs  impersonate_routes.rs  mod.rs  org_routes.rs
modules/audit_infra/: Cargo.toml
modules/audit_infra/src/: error.rs  lib.rs
modules/audit_infra/src/infrastructure/: backoffice_audit_subscriber.rs  mod.rs  pg_backoffice_audit_log_repository.rs
modules/backoffice_identity/: Cargo.toml
modules/backoffice_identity/src/: error.rs  lib.rs
modules/backoffice_identity/src/domain/: mod.rs
modules/backoffice_identity/src/infrastructure/: jwt_backoffice_token_service.rs  mod.rs
modules/catalog/: Cargo.toml
modules/catalog/src/: error.rs  lib.rs
modules/core/: Cargo.toml
modules/core/src/: error.rs  lib.rs
modules/core/src/application/: mod.rs
modules/demand_planning/: Cargo.toml
modules/demand_planning/src/: error.rs  lib.rs
modules/demand_planning/src/application/: mod.rs  subscriber.rs
modules/fiscal/: Cargo.toml
modules/fiscal/src/: error.rs  lib.rs
modules/fiscal/src/application/: mod.rs
modules/fiscal/src/domain/: mod.rs
modules/fiscal/src/infrastructure/: mod.rs
modules/identity/: Cargo.toml
modules/identity/src/: error.rs  lib.rs
modules/identity/src/application/: mod.rs  validators.rs
modules/identity/src/domain/: mod.rs
modules/identity/src/infrastructure/: jwt_token_service.rs  mod.rs
modules/inventory/: Cargo.toml
modules/inventory/src/: error.rs  lib.rs
modules/inventory/src/application/: mod.rs
modules/inventory/src/domain/: mod.rs
modules/inventory/src/infrastructure/: mod.rs
modules/notifications/: Cargo.toml
modules/notifications/src/: error.rs  lib.rs
modules/purchasing/: Cargo.toml
modules/purchasing/src/: error.rs  lib.rs
modules/restaurant_operations/: Cargo.toml
modules/restaurant_operations/src/: error.rs  lib.rs
modules/sales/: Cargo.toml
modules/sales/src/: error.rs  lib.rs
modules/subscriptions/: Cargo.toml
modules/subscriptions/src/: error.rs  lib.rs
seed/: Cargo.toml
seed/src/: data.rs  main.rs
(+1207 files in other folders)
