[workspace]
resolver = "2"
members = [
    "modules/common",
    "modules/identity",
    "modules/core",
    "modules/inventory",
    "modules/purchasing",
    "modules/sales",
    "api-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "9.3"
rust_decimal = { version = "1.39.0", features = ["serde-float"] }
rust_decimal_macros = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "bigdecimal", "uuid", "tls-rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
