[package]
name = "api-backoffice"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "api-backoffice"
path = "src/main.rs"

[dependencies]
analytics = { path = "../modules/analytics" }
audit_infra = { path = "../modules/audit_infra" }
backoffice_identity = { path = "../modules/backoffice_identity" }
common = { path = "../modules/common" }
events = { path = "../modules/events" }
identity = { path = "../modules/identity" }
subscriptions = { path = "../modules/subscriptions" }
subscription_billing = { path = "../modules/subscription_billing" }
tenancy = { path = "../modules/tenancy" }

async-trait = { workspace = true }
axum = { workspace = true, features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
