[package]
name = "api-gateway"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { path = "../modules/common" }
identity = { path = "../modules/identity" }
core = { path = "../modules/core" }
inventory = { path = "../modules/inventory" }
purchasing = { path = "../modules/purchasing" }
sales = { path = "../modules/sales" }

axum = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
