[package]
name = "api-gateway"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { path = "../modules/common" }
identity = { path = "../modules/identity" }
pos_core = { path = "../modules/core" }
inventory = { path = "../modules/inventory" }
purchasing = { path = "../modules/purchasing" }
sales = { path = "../modules/sales" }

axum = { workspace = true, features = ["json"] }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
