[package]
name = "api-gateway"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { path = "../modules/common" }
identity = { path = "../modules/identity" }
pos_core = { path = "../modules/core" }
inventory = { path = "../modules/inventory" }
purchasing = { path = "../modules/purchasing" }
sales = { path = "../modules/sales" }
fiscal = { path = "../modules/fiscal" }
payments = { path = "../modules/payments" }
shipping = { path = "../modules/shipping" }
catalog = { path = "../modules/catalog" }
events = { path = "../modules/events" }
notifications = { path = "../modules/notifications" }
analytics = { path = "../modules/analytics" }
accounting = { path = "../modules/accounting" }
demand_planning = { path = "../modules/demand_planning" }
cash_management = { path = "../modules/cash_management" }
loyalty = { path = "../modules/loyalty" }
booking = { path = "../modules/booking" }
service_orders = { path = "../modules/service_orders" }
restaurant_operations = { path = "../modules/restaurant_operations" }

axum = { workspace = true, features = ["json", "multipart"] }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
governor = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
