[package]
name = "seed"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "seed"
path = "src/main.rs"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
argon2 = { workspace = true }
