[package]
name = "restaurant_operations"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { path = "../common" }
identity = { path = "../identity" }
events = { path = "../events" }

serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
