[package]
name = "subscriptions"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { path = "../common" }
identity = { path = "../identity" }
events = { path = "../events" }
tenancy = { path = "../tenancy" }

serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
